--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,6 @@ main {
   grid-template-columns: 7fr 4fr;
   grid-template-rows: 59px 1fr;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.08);
-  /* box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
-  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px; */
 }
 
 header {
@@ -74,7 +72,7 @@ header {
   grid-row: 2 / 3;
   background-color: #fff;
   overflow-y: scroll;
-  scrollbar-color: red orange;
+  scrollbar-color: #836d53 #f1d4b3;
   scrollbar-width: thin;
   position: relative;
 }
